# collmex-cli

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
src/collmex_cli/: __init__.py  api.py  client.py  config.py  email.py  main.py  models.py  zugferd.py
