[project]
name = "collmex-cli"
version = "0.1.0"
description = "CLI wrapper for Collmex accounting API - LLM-friendly interface"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "drafthorse>=2.4.0",
]

[project.scripts]
collmex = "collmex_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collmex_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
